--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,8 @@ sites:
     url: https://forum.rur.rs
   - name: Interprom
     url: https://www.interprom.rs
+  - name: Underdev
+    url: https://underdev.net/pi.php
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
